# guidescan-cli

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml  release.yml
configure/: version.hpp.in
examples/: chr2acc.py
include/: genome_index.hpp  guidescan.hpp  kmer.hpp  process.hpp  seq_io.hpp  version.hpp
include/genomics/: doench.hpp  index.hpp  kmer.hpp  printer.hpp  process.hpp  sam.hpp  seq_io.hpp  sequences.hpp  structures.hpp
include/io/: curl.hpp
manual/: manual.bib  manual.tex
scripts/: append_scores.py  build_dbs.py  decode_database.py  decode_database2.py  environment.yaml  generate_kmers.py
scripts/Rule_Set_2_scoring/: README.txt
scripts/Rule_Set_2_scoring/analysis/: rs2_score_calculator.py
sdsl/: CMakeLists.txt
sdsl/include/sdsl/: csa_sada.hpp  csa_wt.hpp
src/: #guidescan.cxx#  CMakeLists.txt  genome_index.cxx  guidescan.cxx  kmer.cxx  main.cxx  seq_io.cxx
src/genomics/: kmer.cxx  seq_io.cxx  sequences.cxx  structures.cxx
src/io/: curl.cxx
test/: CMakeLists.txt  csa_sada_test.cxx  diff_kmers.py
